chore: update readme, changelog and extension description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scrapy-command-runner",
   "displayName": "Scrapy Command Runner",
-  "description": "Easily run Scrapy command from vscode",
+  "description": "Easily run Scrapy commands straight from VS Code",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.47.0"
